--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "lint": "eslint . --fix",
     "format": "prettier --write src/",
     "cypress:open": "cypress open",
-    "cypress:run": "cypress run"
+    "cypress:run": "cypress run",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "peerDependencies": {
     "vue": "^3.2.0"
@@ -35,6 +37,11 @@
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^4.0.1",
+    "@storybook/addon-a11y": "^9.0.15",
+    "@storybook/addon-docs": "^9.0.15",
+    "@storybook/addon-vitest": "^9.0.15",
+    "@storybook/vue3-vite": "^9.0.15",
     "@tsconfig/node22": "^22.0.1",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.14.0",
@@ -47,15 +54,24 @@
     "@vue/tsconfig": "^0.7.0",
     "cypress": "^14.4.0",
     "eslint": "^9.22.0",
+    "eslint-plugin-storybook": "^9.0.15",
     "eslint-plugin-vue": "~10.0.0",
     "jiti": "^2.4.2",
     "jsdom": "^26.0.0",
     "npm-run-all2": "^7.0.2",
     "prettier": "3.5.3",
+    "storybook": "^9.0.15",
     "typescript": "~5.8.0",
     "vite": "^6.2.4",
     "vite-plugin-vue-devtools": "^7.7.2",
     "vitest": "^3.1.1",
-    "vue-tsc": "^2.2.10"
+    "vue-tsc": "^2.2.10",
+    "@vitest/browser": "3.2.4",
+    "playwright": "^1.53.2"
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:storybook/recommended"
+    ]
   }
 }
