--- a/package.json
+++ b/package.json
@@ -1,7 +1,16 @@
 {
   "name": "vue-tw-ui",
+  "description": "Reusable Vue 3 + Tailwind UI component library with Vite, Storybook, and TypeScript.",
   "version": "0.1.4",
   "private": false,
+  "keywords": [
+    "vue",
+    "vue3",
+    "tailwindcss",
+    "component-library",
+    "vite",
+    "typescript"
+  ],
   "type": "module",
   "main": "dist/vue-tw-ui.umd.js",
   "module": "dist/vue-tw-ui.es.js",
@@ -9,22 +18,27 @@
   "files": [
     "dist"
   ],
+  "sideEffects": false,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kashyapkrlucky/vue-tw-ui"
+  },
+  "author": "Lucky Kumar Kashyap <kashyapkrlucky@gmail.com>",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
       "import": "./dist/vue-tw-ui.es.js",
-      "require": "./dist/vue-tw-ui.umd.js"
+      "require": "./dist/vue-tw-ui.umd.js",
+      "css": "./dist/vue-tw-ui.css"
     }
   },
   "scripts": {
     "dev": "vite",
     "build": "vite build && npm run type-check",
-    "build-only": "vite build",
+    "build:css": "tailwindcss -i ./src/assets/main.css -o ./dist/vue-tw-ui.css --minify --content './src/**/*.{vue,js,ts}'",
     "type-check": "vue-tsc --project tsconfig.json --declaration --emitDeclarationOnly --declarationDir dist",
     "lint": "eslint . --fix",
     "format": "prettier --write src/",
-    "cypress:open": "cypress open",
-    "cypress:run": "cypress run",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
@@ -33,8 +47,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
-    "lucide-vue-next": "^0.507.0",
-    "tailwindcss": "^4.1.7"
+    "lucide-vue-next": "^0.507.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.0.1",
@@ -46,6 +59,7 @@
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-vue": "^5.2.3",
+    "@vitest/browser": "3.2.4",
     "@vitest/coverage-v8": "^3.1.4",
     "@vitest/eslint-plugin": "^1.1.39",
     "@vue/eslint-config-prettier": "^10.2.0",
@@ -59,15 +73,15 @@
     "jiti": "^2.4.2",
     "jsdom": "^26.0.0",
     "npm-run-all2": "^7.0.2",
+    "playwright": "^1.53.2",
     "prettier": "3.5.3",
     "storybook": "^9.0.15",
+    "tailwindcss": "^4.1.11",
     "typescript": "~5.8.0",
     "vite": "^6.2.4",
     "vite-plugin-vue-devtools": "^7.7.2",
     "vitest": "^3.1.1",
-    "vue-tsc": "^2.2.10",
-    "@vitest/browser": "3.2.4",
-    "playwright": "^1.53.2"
+    "vue-tsc": "^2.2.10"
   },
   "eslintConfig": {
     "extends": [
